--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -22,8 +22,8 @@
       "matchStrings": [
         "GO_VERSION: '(?<currentValue>.*?)'\\n"
       ],
-      "datasourceTemplate": "golang-version",
-      "depNameTemplate": "golang"
+      "datasourcePalette": "golang-version",
+      "depNamePalette": "golang"
     }, {
 // We want a PR to bump golangci-lint versions used through env variables in
 // any Github Actions, taking it from the official Github repository tags.
@@ -31,8 +31,8 @@
       "matchStrings": [
         "GOLANGCI_VERSION: '(?<currentValue>.*?)'\\n"
       ],
-      "datasourceTemplate": "github-tags",
-      "depNameTemplate": "golangci/golangci-lint"
+      "datasourcePalette": "github-tags",
+      "depNamePalette": "golangci/golangci-lint"
     }
   ],
 // PackageRules disabled below should be enabled in case of vulnerabilities
