--- a/examples/install.yaml
+++ b/examples/install.yaml
@@ -1,6 +1,6 @@
 apiVersion: pkg.crossplane.io/v1
 kind: Provider
 metadata:
-  name: upjet-provider-template
+  name: provider-palette
 spec:
-  package: upbound/upjet-provider-template:v0.1.0
+  package: vrabbi/provider-palette:v0.1.0
