Initial set of 12 working resources with examples

--- a/examples/install.yaml
+++ b/examples/install.yaml
@@ -3,4 +3,4 @@ kind: Provider
 metadata:
   name: provider-palette
 spec:
-  package: vrabbi/provider-palette:v0.1.0
+  package: ghcr.io/vrabbi/provider-palette:v0.0.1
