--- a/examples/providerconfig/providerconfig.yaml
+++ b/examples/providerconfig/providerconfig.yaml
@@ -1,4 +1,16 @@
-apiVersion: palette.upbound.io/v1beta1
+apiVersion: palette.crossplane.io/v1beta1
+kind: ProviderConfig
+metadata:
+  name: tenant
+spec:
+  credentials:
+    source: Secret
+    secretRef:
+      name: spectrocloud-tenant-creds
+      namespace: crossplane-system
+      key: credentials
+---
+apiVersion: palette.crossplane.io/v1beta1
 kind: ProviderConfig
 metadata:
   name: default
@@ -6,6 +18,18 @@ spec:
   credentials:
     source: Secret
     secretRef:
-      name: example-creds
+      name: spectrocloud-default-creds
+      namespace: crossplane-system
+      key: credentials
+---
+apiVersion: palette.crossplane.io/v1beta1
+kind: ProviderConfig
+metadata:
+  name: saas-tenant
+spec:
+  credentials:
+    source: Secret
+    secretRef:
+      name: spectrocloud-saas-tenant-creds
       namespace: crossplane-system
       key: credentials
