Add AKS Cluster support with Examples

--- a/examples/providerconfig/providerconfig.yaml
+++ b/examples/providerconfig/providerconfig.yaml
@@ -33,3 +33,15 @@ spec:
       name: spectrocloud-saas-tenant-creds
       namespace: crossplane-system
       key: credentials
+---
+apiVersion: palette.crossplane.io/v1beta1
+kind: ProviderConfig
+metadata:
+  name: scott-saas
+spec:
+  credentials:
+    source: Secret
+    secretRef:
+      name: spectrocloud-scott-saas-creds
+      namespace: crossplane-system
+      key: credentials
