--- a/examples/resources/ipam/privatecloudgatewaydnsmap.yaml
+++ b/examples/resources/ipam/privatecloudgatewaydnsmap.yaml
@@ -3,10 +3,8 @@ kind: PrivateCloudGatewayDNSMap
 metadata:
   name: demo-cp-pcg-dns-map-01
 spec:
-  providerConfigRef:
-    name: saas-tenant
   forProvider:
-    dataCenter: Demo-Datacenter
-    network: 	/infra/segments/Demo-Aviv
-    privateCloudGatewayId: 65fc061d96c13cd453bc7679
-    searchDomainName: test1.spectro.com
+    dataCenter: "FILL ME IN"
+    network: "FILL ME IN"
+    privateCloudGatewayId: "FILL ME IN"
+    searchDomainName: "FILL ME IN"
