--- a/examples-generated/palette/v1alpha1/gcpcluster.yaml
+++ b/examples-generated/palette/v1alpha1/gcpcluster.yaml
@@ -8,13 +8,17 @@ metadata:
   name: cluster
 spec:
   forProvider:
-    cloudAccountId: ${data.spectrocloud_cloudaccount_gcp.account.id}
+    cloudAccountIdSelector:
+      matchLabels:
+        testing.upbound.io/example-name: spectrocloud_cloudaccount_gcp
     cloudConfig:
     - network: ${var.gcp_network}
       project: ${var.gcp_project}
       region: ${var.gcp_region}
     clusterProfile:
-    - id: ${data.spectrocloud_cluster_profile.profile.id}
+    - idSelector:
+        matchLabels:
+          testing.upbound.io/example-name: spectrocloud_cluster_profile
     machinePool:
     - azs:
       - us-west3-a
