--- a/examples-generated/palette/v1alpha1/gkecluster.yaml
+++ b/examples-generated/palette/v1alpha1/gkecluster.yaml
@@ -8,12 +8,16 @@ metadata:
   name: cluster
 spec:
   forProvider:
-    cloudAccountId: ${data.spectrocloud_cloudaccount_gcp.account.id}
+    cloudAccountIdSelector:
+      matchLabels:
+        testing.upbound.io/example-name: spectrocloud_cloudaccount_gcp
     cloudConfig:
     - project: ${var.gcp_project}
       region: ${var.gcp_region}
     clusterProfile:
-    - id: ${data.spectrocloud_cluster_profile.profile.id}
+    - idSelector:
+        matchLabels:
+          testing.upbound.io/example-name: spectrocloud_cluster_profile
     context: project
     description: Gke Cluster
     machinePool:
