--- a/examples/resources/app-mode/application-new-vcluster.yaml
+++ b/examples/resources/app-mode/application-new-vcluster.yaml
@@ -3,12 +3,10 @@ kind: Application
 metadata:
   name: demo-cp-application-03
 spec:
-  providerConfigRef:
-    name: default
   forProvider:
-    applicationProfileUid: 67f2a6182bf7ea376554be9d
+    applicationProfileUid: "FILL ME IN"
     config:
-    - clusterGroupUid: 67ed902875815d89fc96802a
+    - clusterGroupUid: "FILL ME IN"
       clusterContext: project
       clusterName: demo-vc-03
       limits:
